fix: web3modal z-index

--- a/packages/arb-token-bridge-ui/src/styles/tailwind.css
+++ b/packages/arb-token-bridge-ui/src/styles/tailwind.css
@@ -86,7 +86,7 @@ body > iframe {
 }
 
 .web3modal-modal-lightbox {
-  @apply z-50;
+  z-index: 50 !important;
 }
 
 input:checked + .slider {
